syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.hugo.metalbroker.model.datavalues.spot";
//option java_outer_classname = "SpotItems";

message SpotItems {
  google.protobuf.Timestamp date = 1;
  double ask = 2;
  double mid = 3;
  double bid = 4;
  double value = 5;
  double performance = 6;
  string weightUnit = 7;
  string metal = 8;
}

message SpotItemsList {
  repeated SpotItems items = 1;
}